--- a/app/src/main/res/layout/item_pomodoro.xml
+++ b/app/src/main/res/layout/item_pomodoro.xml
@@ -1,15 +1,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="20dp"
-    android:paddingLeft="16dp">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
+    android:background="@color/grey"
+    android:elevation="10dp">
 
     <ImageView
         android:id="@+id/tarefa_icon"
         android:layout_alignParentLeft="true"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@null" />
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@mipmap/file_document_48_black" />
 
     <TextView
         android:id="@+id/tarefa_titulo"
@@ -20,7 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:paddingRight="16dp"
-        android:textSize="16sp" />
+        android:textSize="14sp"
+        android:maxWidth="1500sp"/>
 
     <TextView
         android:id="@+id/tarefa_descricao"
@@ -31,34 +34,51 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingRight="16dp"
-        android:textSize="12sp" />
+        android:textSize="10sp"
+        android:maxWidth="150sp"/>
+
+    <TextView
+        android:id="@+id/tarefa_qtd_pomodoro"
+        android:layout_below="@id/tarefa_descricao"
+        android:layout_alignLeft="@id/tarefa_descricao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:maxWidth="150sp"/>
 
     <Button
         android:id="@+id/bt_iniciar"
-        android:text="Iniciar"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_above="@+id/bt_concluir"
-        android:layout_alignRight="@+id/vw_divider"
-        android:onClick="btIniciarOnClick"/>
+        android:text="@string/bt_iniciar"
+        android:layout_width="50dp"
+        android:layout_height="25dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:textSize="10sp"
+        android:padding="5dp"
+        android:layout_marginRight="20dp"/>
 
     <Button
         android:id="@+id/bt_concluir"
-        android:text="Concluir"
+        android:text="@string/bt_concluir"
+        android:enabled="false"
+        android:layout_width="50dp"
+        android:layout_height="25dp"
+        android:textSize="8sp"
+        android:padding="5dp"
+        android:layout_alignTop="@+id/tarefa_qtd_pomodoro"
+        android:layout_alignLeft="@+id/bt_iniciar"/>
+
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_above="@+id/vw_divider"
-        android:layout_alignRight="@+id/vw_divider"
-        android:onClick="btConcluirOnClick"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/item_menu"
+        android:src="@mipmap/ic_dots_vertical_black_24dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="5dp"
+        android:layout_marginEnd="17dp" />
 
 
-    <View
-        android:id="@+id/vw_divider"
-        android:background="@color/colorPrimary"
-        android:layout_width="match_parent"
-        android:layout_height="0.8dp"
-        android:layout_below="@+id/tarefa_icon"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
