Navegação, Inserção, Listar todos, exclusão e edição

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,23 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/tempoPomodoro"
-        android:gravity="center_horizontal" />
-
-    <FrameLayout
-        android:id="@+id/fragment_lista_tarefa"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.86"></FrameLayout>
+        android:gravity="center_horizontal"
+        android:textSize="50sp"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btAdicionarTarefa"
+        android:textSize="20sp"
+        android:paddingTop="3dp"
+        android:paddingBottom="3dp"
         android:onClick="btAdicionarTarefaOnClick" />
+
+    <FrameLayout
+        android:id="@+id/fragment_lista_tarefa"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
 </LinearLayout>
