--- a/app/src/main/res/layout/item_pomodoro.xml
+++ b/app/src/main/res/layout/item_pomodoro.xml
@@ -4,14 +4,15 @@
     android:layout_marginBottom="5dp"
     android:layout_marginTop="5dp"
     android:background="@color/grey"
-    android:elevation="10dp">
+    android:elevation="4dp">
 
     <ImageView
         android:id="@+id/tarefa_icon"
         android:layout_alignParentLeft="true"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:src="@mipmap/file_document_48_black" />
+        android:src="@mipmap/file_document_48_black"
+        android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/tarefa_titulo"
@@ -69,9 +70,9 @@
         android:layout_alignLeft="@+id/bt_iniciar"/>
 
     <ImageView
+        android:id="@+id/img_context_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/item_menu"
         android:src="@mipmap/ic_dots_vertical_black_24dp"
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
